<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:scaleType="centerCrop"
        android:src="@drawable/top" />

    <TextView
        android:id="@+id/Wtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowRadius="3.0"
        android:text="@string/Wtl"
        android:textColor="@color/black2"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/str1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/str1"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:paddingLeft="16dp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/inputbox"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColorHint="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <ImageButton
            android:layout_marginLeft="35dp"
            android:id="@+id/btn"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/btn_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str2"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>


    <Button
        android:layout_marginTop="180dp"
        android:id="@+id/lbtn"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/loginbutton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str3"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str4"
            android:textColor="@color/orange"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>